Updated colours and font-size.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake catcher: Acacia Ridge</title>
-    <script src="js/main.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body class="six-am">
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>
-    <div class="time-block"></div>   
+<html translate="no" lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Snake catcher: Acacia Ridge</title>
+		<script src="js/main.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300;400;500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles/styles.css" />
+	</head>
+	<body class="six-am">
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
+		<div class="time-block"></div>
 
-    <section id="main-content">
-        <h1 id="time">6 AM</h1>
-    </section>
-    
-</body>
+		<section id="main-content">
+			<h1>Snake Catcher</h1>
+			<h2 id="time">6 AM</h2>
+		</section>
+	</body>
 </html>
